<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:padding="20dp">
        
        <TextView
        android:id="@+id/tvTheQuestionHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/questionHeader" />
        
        <TextView
        android:id="@+id/tvTheQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question"
        android:layout_marginTop="5dp"
        android:maxLines="10"/>
        
        <TextView
        android:id="@+id/tvTheAnswerHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answerHeader"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/tvTheQuestion"/>
        
        <TextView
        android:id="@+id/tvTheAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer"
        android:layout_marginTop="5dp"
        android:maxLines="10"
        android:layout_below="@+id/tvTheAnswerHeader"/>
        
        <TextView
        android:id="@+id/tvReviewHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reviewHeader"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/tvTheAnswer"/>
        
        <EditText
        android:id="@+id/etReviewField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="10" />
        
        <TextView
        android:id="@+id/tvAddReview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/sendReview"
        android:layout_below="@+id/etReviewField"/>
        
        </LinearLayout>
