<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp" >

    <TextView
        android:id="@+id/tvQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:textSize="18dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tvQuestionDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:maxLines="6"
        android:textSize="12dp" />

    <TextView
        android:id="@+id/tvAnswerHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/answerHeader" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="@color/slidingmenu_devider_color" />

    <TextView
        android:id="@+id/tvAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:maxLines="10"
        android:text="@string/answer" />

    <TextView
        android:id="@+id/tvReviewHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/reviewHeader"
        android:textColor="@color/slidingmenu_devider_color" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="@color/slidingmenu_devider_color" />

    <ListView
        android:id="@+id/lvReviews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnAcceptAnswer"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="2dp"
            android:layout_marginTop="1dp"
            android:layout_weight="1"
            android:text="@string/sendAnswer" />

        <Button
            android:id="@+id/btnDeclineAnswer"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="1dp"
            android:layout_weight="1"
            android:text="@string/declineAnswer" />
    </LinearLayout>

</LinearLayout>